# video-platform

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs  video_stream.rs  video_upload.rs
backend/src/models/: app.rs
backend/src/routes/: video.rs
frontend/: package.json
frontend/project.inlang/: settings.json
frontend/src/routes/demo/paraglide/: +page.svelte
