[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-web = "4.11.0"
bcrypt = "0.17.0"
bytes = "1.10.1"
chrono = "0.4.41"
fern = "0.7.1"
jsonwebtoken = "9.3.1"
log = "0.4.27"
multipart = "0.18.0"
redis = "0.31.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
